# web3-rust-demo

./: Cargo.toml  README.md
deploy-smart-constract/: truffle-config.js
deploy-smart-constract/contracts/: hello.sol
src/: lib.rs  main.rs
src/contracts/: Hello.abi.json
src/render_abi_json/: createfile.rs  mod.rs
