[package]
name = "web3-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.19.0"  # {git = "https://github.com/tomusdrw/rust-web3"} #
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.102"
serde = { version = "1.0.171", features = ["derive"] }